# textual-slider

./: CHANGELOG.md  README.md  mypy.ini  setup.cfg
examples/: rgb.py  spinal_tap.py  steps.py  with_step.py
src/textual_slider/: __init__.py  _slider.py  slider.py
tests/: test_slider.py
