[metadata]
name = textual-slider
version = attr: textual_slider.__version__
author = TomJGooding
description = A Textual widget for a simple slider
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/textual-slider
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.42.0

[options.packages.find]
where = src

[options.package_data]
textual_slider = py.typed

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-asyncio
    pytest-cov
    textual-dev
